#+title: Changelog
#+link:  pull https://github.com/grtcdr/darkman.el/pull/%s
#+link:  user https://github.com/%s

This document tracks the most important changes of this package
throughout time (in descending chronological order) and in between
releases.

* 0.7.0

- Fix assignment to free (now obsolete) variable ~darkman--dbus-signal~

* 0.6.0

- Protect the invocation of ~darkman-register-monitor~
- Address linting errors to prepare for the submission of the package to MELPA

* 0.5.0

+ [[user:aerz][Agustín Cisneros]]: Fix a bug that caused =load-theme= to be called
  twice when =ModeChanged= is signaled ([[pull:11][#11]])
+ Write a multi-format manual replacing the single-format handbook
+ Simplify the README file
+ Integrate engrave-faces in the documentation
+ Add the first unit test

* 0.4.0

+ [[user:aerz][Agustín Cisneros]]: Defer loading untrusted themes until the daemon is
  fully initialized
+ Fix opposing behavior of =darkman-switch-themes-silently=
+ General improvements and more helpful additions to the documentation
  and the website which now supports syntax highlighting

* 0.3.0

+ Refactor website structure
+ Rename =darkman--get-assoc-theme= function to =darkman--lookup-theme=
+ Add a new variable called =darkman-switch-themes-silently= which
  determines whether an entry is logged to the =*Messages*= buffer
  when the mode is toggled
+ General improvements to documentation

* 0.2.0

+ Conform to [[info:elisp#Coding Conventions][Emacs Lisp code conventions]]
+ Move to an ISC license
+ [[user:lexa][Aleksei Fedotov]]: Switch to the appropriate theme when =darkman-mode=
  is enabled ([[pull:5][#5]])
+ [[user:lexa][Aleksei Fedotov]]: Implement choosing the values of =darkman-themes=
  from the =customize= menu ([[pull:4][#4]])
+ Define a =customize= group
+ [[user:lexa][Aleksei Fedotov]]: Lazy-loaded functions ([[pull:1][#1]])
+ Avoid loading themes twice when =darkman-toggle= is called
+ Create a presentation website

* 0.1.0
