@@ -8,6 +8,7 @@ releases.
 
 * 0.7.0
 
+- Prefer if form in ~darkman-get~ function
 - Fix assignment to free (now obsolete) variable ~darkman--dbus-signal~
 
 * 0.6.0
